# plode-chrome-extension

./: .gitignore  Cargo.toml  README.md  extension.pem  macos_pkg.sh  plode.pkg  plode_installer.nsi  plode_mass_storage.pkg
extension/: main.js  manifest.json
resource/macOS_x86_64/: wchisp
scripts/: postinstall
src/: compiler.rs  lib.rs  main.rs  main_old.rs  models.rs  socketio.rs  usb.rs
