[package]
name = "plode_web_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
rusb="0.9.4"
serialport = "4.2"
base64 = "0.22.1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.4", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
socketioxide = "0.16.2"
rmpv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
include_dir = "0.7.4"
notify = "6.1.1" 
reqwest = { version = "0.12.2", features = ["blocking"] }
zip = "4.3.0"